# vbuff

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.md  deny.toml  plan.md  recommendation.md
.github/workflows/: macos-notarize.yml  mutation.yml  packaging-smoke.yml  performance.yml  quality.yml  quarterly-scope-review.yml  release-provenance.yml  security.yml  wasm-demo.yml
.zed/: settings.json  tasks.json
crates/vbuff-core/: Cargo.toml
crates/vbuff-core/src/: bloom.rs  classify.rs  clock.rs  compose.rs  delivery.rs  eviction.rs  facets.rs  feedback.rs  filter.rs  fingerprint.rs  format_fidelity.rs  hash.rs  history_tier.rs  lib.rs  observability.rs  onboarding.rs  privacy.rs  reliability.rs  secret.rs  security_audit.rs  slo.rs
crates/vbuff-core/src/capture/: coalesce.rs  integrity.rs  ledger.rs  mod.rs  policy.rs  scheduler.rs
crates/vbuff-core/src/intelligence/: actions.rs  budget.rs  gate.rs  grouping.rs  mod.rs
crates/vbuff-core/src/recall/: graph.rs  memory.rs  mod.rs  query.rs  search.rs  source.rs
crates/vbuff-core/src/trust/: access.rs  consent.rs  mod.rs  posture.rs  rules.rs  secrets.rs
crates/vbuff-core/src/workflow/: boards.rs  compare.rs  everyday.rs  links.rs  mod.rs  selection.rs  snippets.rs  timeline.rs
crates/vbuff-core/tests/: performance_budget.rs  zero_loss_capture.rs
crates/vbuff-gui/: Cargo.toml
crates/vbuff-gui/src/: app.rs  color.rs  demo.rs  design.rs  experience.rs  input.rs  lib.rs  media.rs  navigation.rs  projection.rs  render.rs  state.rs  theme.rs  thumbnail.rs  trust_view.rs  view.rs
crates/vbuff-gui/tests/: popup_snapshots.rs
crates/vbuff-ipc/: Cargo.toml
crates/vbuff-ipc/src/: api_token.rs  batch.rs  callback.rs  dry_run.rs  event.rs  handshake.rs  lib.rs
crates/vbuff-ipc/src/integration/: access.rs  automation.rs  browser.rs  editor.rs  error.rs  mod.rs  query.rs  terminal.rs  webhook.rs
crates/vbuff-ipc/src/integration/automation/: remote.rs  share.rs  snippets.rs
crates/vbuff-platform/: Cargo.toml
crates/vbuff-platform/src/: capabilities.rs  cf_html.rs  clipboard.rs  desktop.rs  error.rs  format_map.rs  geometry.rs  hotkey.rs  keymap.rs  lib.rs  lifecycle.rs  paste.rs  paste_fidelity.rs  permission.rs  security.rs  traits.rs  tripwire.rs  wayland.rs  windows.rs
crates/vbuff-platform/tests/: format_fidelity_corpus.rs
crates/vbuff-platform/tests/corpus/: format-fidelity-v1.json
crates/vbuff-plugin/: Cargo.toml
crates/vbuff-plugin/src/: adapter.rs  bundle.rs  component.rs  lib.rs  manifest.rs  migration.rs  offline.rs  pipeline.rs  protocol.rs  recipes.rs  recognizer.rs  snippet_pack.rs
crates/vbuff-plugin/wit/: vbuff-plugin.wit
crates/vbuff-store/: Cargo.toml
crates/vbuff-store/src/: cas.rs  data_lifecycle.rs  error.rs  image_fingerprint.rs  lib.rs  lifecycle.rs  migration.rs  paths.rs  row.rs  schema.rs  search.rs  serde_clip.rs
crates/vbuff-store/tests/: integration.rs  performance_budget.rs
crates/vbuff-sync/: Cargo.toml
crates/vbuff-sync/src/: artifact.rs  bootstrap.rs  burn.rs  capability.rs  clock.rs  collection_vault.rs  conflict.rs  crdt.rs  crypto.rs  device_experience.rs  error.rs  ledger.rs  lib.rs  membership.rs  merkle.rs  policy.rs  provenance.rs  vault_export.rs  wire.rs
crates/vbuff-sync/src/device_experience/: outbox.rs  policy.rs  revocation.rs  snippets.rs  tests.rs  timeline.rs  travel.rs
crates/vbuff-types/: Cargo.toml
crates/vbuff-types/src/: ipc.rs  lib.rs  rgba.rs  status.rs
crates/vbuff-update/: Cargo.toml
crates/vbuff-update/src/: attestation.rs  lib.rs  manifest.rs
docs/: code-audit-top-50.md  competitive-analysis.md  competitive-strategy-2026.md  competitor-extras.md  competitor-research.md  data-contract-v1.md  data-contract-v2.md  data-contract-v3.md  decision-gates-151-200.md  decision-gates-201-250.md  decision-gates-251-300.md  decision-gates-301-350.md  design-review-native-egui.md  features-top-500.md  ideas-301-400.md  ideas-401-500.md  ideas-501-600.md  ideas-601-610.md  ideas-611-620.md  ideas-top-300.md  implementation-batch-001-050.md  implementation-batch-051-100.md  implementation-batch-101-150.md  implementation-batch-151-200.md  implementation-batch-201-250.md  implementation-batch-251-300.md  implementation-batch-301-350.md  limitations.md  maintainer-handoff.md  mistakes-top-500.md  pain-points.md  problems-improvements-top-500.md  product-strategy-decisions.md  repositories-research-100.md  scope-review.md
fuzz/: Cargo.toml
fuzz/corpus/cf_html/: basic
fuzz/corpus/format_map/: plain_text
fuzz/fuzz_targets/: api_token.rs  cf_html.rs  flavor_json.rs  format_map.rs  plugin_manifest.rs
packaging/linux/: vbuff.desktop  vbuff.service
packaging/macos/: Info.plist
scripts/: package-macos.sh  wayland-reality-check.sh
src/: actions.rs  app.rs  ask.rs  autostart.rs  capture.rs  commands.rs  config.rs  constants.rs  diagnostics.rs  doctor.rs  gui.rs  heartbeat.rs  history.rs  logging.rs  main.rs  maintenance.rs  memory_pressure.rs  paste.rs  runtime_metrics.rs  seed_pack.rs  tray.rs  verify.rs
src/single_instance/: mod.rs  unix.rs  windows_fallback.rs
supply-chain/: audits.toml  config.toml
tests/: data_contract_freeze_v1.rs  data_contract_freeze_v2.rs  data_contract_freeze_v3.rs  docs_contract.rs  scope_contract.rs
web-demo/: index.html
