[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["vbuff contributors"]
repository = "https://github.com/vbuff/vbuff"

[workspace.dependencies]
# Internal crates
vbuff-types = { path = "crates/vbuff-types", version = "0.1.0" }
vbuff-core = { path = "crates/vbuff-core", version = "0.1.0" }
vbuff-store = { path = "crates/vbuff-store", version = "0.1.0" }
vbuff-platform = { path = "crates/vbuff-platform", version = "0.1.0" }
vbuff-gui = { path = "crates/vbuff-gui", version = "0.1.0" }
vbuff-sync = { path = "crates/vbuff-sync", version = "0.1.0" }
vbuff-ipc = { path = "crates/vbuff-ipc", version = "0.1.0" }
vbuff-plugin = { path = "crates/vbuff-plugin", version = "0.1.0" }
vbuff-update = { path = "crates/vbuff-update", version = "0.1.0" }

# Data / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = { version = "1.2", features = ["serde"] }
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"
semver = { version = "1", features = ["serde"] }

# Storage
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled"] }

# GUI
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
egui_kittest = { version = "=0.32.3", features = ["eframe", "snapshot", "wgpu"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

# Platform integrations
arboard = "3.6"
global-hotkey = "0.8"
tray-icon = "0.24"
enigo = "0.6"

# Infra
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cpu-time = "1"
atomic-write-file = "0.3"
crossbeam-queue = "0.3.12"
chacha20poly1305 = "0.11"
ed25519-dalek = "3.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "zeroize"] }
bip39 = "2.2.2"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
zstd = "0.13"
getrandom = "0.3"
zeroize = "1.8"
rlimit = "0.11"
prctl = "1.0"
memory-stats = { version = "1.2", default-features = false, features = ["always_use_statm"] }

[package]
name = "vbuff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A cross-platform clipboard manager (MVP single-process build)."

[[bin]]
name = "vbuff"
path = "src/main.rs"

[features]
# The tray integration is enabled by default; if it ever proves troublesome to
# build/run on a given platform it can be disabled with `--no-default-features`.
default = ["tray"]
tray = ["dep:tray-icon"]

[dependencies]
vbuff-types.workspace = true
vbuff-core.workspace = true
vbuff-store.workspace = true
vbuff-platform.workspace = true
vbuff-gui.workspace = true
vbuff-update.workspace = true

eframe.workspace = true
egui.workspace = true
arboard.workspace = true
global-hotkey.workspace = true
tray-icon = { workspace = true, optional = true }
image.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cpu-time.workspace = true
atomic-write-file.workspace = true
crossbeam-queue.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true
memory-stats.workspace = true

[dev-dependencies]
vbuff-ipc.workspace = true
