[package]
name = "vbuff-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
vbuff-ipc = { path = "../crates/vbuff-ipc" }
vbuff-plugin = { path = "../crates/vbuff-plugin" }
vbuff-types = { path = "../crates/vbuff-types" }

[[bin]]
name = "api_token"
path = "fuzz_targets/api_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plugin_manifest"
path = "fuzz_targets/plugin_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flavor_json"
path = "fuzz_targets/flavor_json.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
