[package]
name = "vbuff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure clipboard-history logic: hashing, dedup, eviction, search, classification."

[dependencies]
vbuff-types.workspace = true
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
ulid.workspace = true
chrono.workspace = true
