[package]
name = "vbuff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure clipboard-history logic: hashing, dedup, eviction, search, classification."

[dependencies]
vbuff-types.workspace = true
blake3.workspace = true
chrono.workspace = true
thiserror.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
similar.workspace = true
url.workspace = true
hmac.workspace = true
sha2.workspace = true
zeroize.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
ulid.workspace = true
