[package]
name = "vbuff-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui/eframe popup UI for vbuff."

[dependencies]
vbuff-types.workspace = true
vbuff-core.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
image.workspace = true
chrono.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
getrandom = { workspace = true, features = ["wasm_js"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
egui_kittest.workspace = true
