[package]
name = "vbuff-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned IPC contracts, event filters, and local API authorization for vbuff."

[dependencies]
vbuff-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
getrandom.workspace = true
zeroize.workspace = true
