[package]
name = "vbuff-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform backend traits and cross-platform MVP implementations for vbuff."

[dependencies]
vbuff-types.workspace = true
arboard.workspace = true
global-hotkey.workspace = true
enigo.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
zeroize.workspace = true
blake3.workspace = true

[target.'cfg(unix)'.dependencies]
rlimit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
prctl.workspace = true

[dev-dependencies]
vbuff-core.workspace = true
serde_json.workspace = true
