[package]
name = "vbuff-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed persistence for vbuff clip history."

[dependencies]
vbuff-types.workspace = true
vbuff-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
