[package]
name = "vbuff-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure E2E sync protocol primitives for vbuff."

[dependencies]
vbuff-types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
blake3.workspace = true
thiserror.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
bip39.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
zstd.workspace = true
getrandom.workspace = true
zeroize.workspace = true
