[package]
name = "vbuff-update"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signed update manifests, staged rollout, and build verification for vbuff."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
sha2.workspace = true
semver.workspace = true
url.workspace = true
